[package]
name = "excel2flatbuffers-rs"
version = "0.1.0"
authors = ["imoegirl <imoegirl@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16.1"
flatbuffers = "0.6.1"
flatc-rust = { git = "https://github.com/frol/flatc-rust" }
rlua = "0.17.0"
clap = "2.33.3"
# flexbuffers = "0.1.0"

